微调 card bg for DarkMode

--- a/app/javascript/homeland/dark-mode.scss
+++ b/app/javascript/homeland/dark-mode.scss
@@ -1,6 +1,6 @@
 @media (prefers-color-scheme: dark) {
   :root {
-    --primary: #e0e0e0;
+    --primary: #9e9e9e;
     --text-color: #e0e0e0;
     --text-color1: #bbb;
     --text-color2: #999;
@@ -48,8 +48,8 @@
 
     --navbar-topic-title-background-color: #151516;
 
-    --card-border-color: #3d3d3d3b;
-    --card-background-color: #1c1c1d;
+    --card-border-color: #3d3d3d29;
+    --card-background-color: #181819;
     --card-title-secondary-color: #777;
 
     --dropdown-menu-background-color: #222222ee;
