--- a/app/views/search/_topic.html.erb
+++ b/app/views/search/_topic.html.erb
@@ -1,11 +1,11 @@
 <%
-title = hit.highlight.title.try(:first) || item.title
+title = item.title
 %>
 <div class="result">
-  <div class="title"><%= link_to highlight(title), item %></div>
+  <div class="title"><%= link_to highlight(title, terms: @search.terms), item %></div>
   <div class="info">
     <span class="url"><%= link_to polymorphic_url(item), item %></span>
     <span class="date" title="Last Updated At"><%= item.created_at.to_date %></span>
   </div>
-  <div class="desc"><%= highlight(hit.highlight.body.try(:first)) %></div>
+  <div class="desc"><%= highlight(hit.hit_content, terms: @search.terms) %></div>
 </div>
