Remove <b> from search result

--- a/app/javascript/front/search.scss
+++ b/app/javascript/front/search.scss
@@ -44,7 +44,7 @@
       color: #888;
       font-size: 15px;
       word-break: break-all;
-      em {
+      b {
         color: var(--red);
       }
     }
