--- a/app/javascript/homeland/index.scss
+++ b/app/javascript/homeland/index.scss
@@ -513,7 +513,7 @@ kbd {
   th,
   td {
     color: var(--text-color);
-    border-color: var(--gray) !important;
+    border-color: var(--table-border-color) !important;
   }
 }
 
