--- a/app/views/users/_reward.html.erb
+++ b/app/views/users/_reward.html.erb
@@ -10,7 +10,7 @@
           <p><i class="fa fa-quote-left pull-left"></i>如果觉得我的文章对您有用，请随意打赏。您的支持将鼓励我继续创作！<i class="fa fa-quote-right pull-right"></i></p>
         </div>
 
-        <% @user.reward_fields.each_with_index do |(field, val), idx| %>
+        <% @user.rewards.each_with_index do |(field, val), idx| %>
         <div class="reward-image"><img src="<%= @user.reward_field(field) %>"></div>
         <% end %>
       </div>
