--- a/app/javascript/homeland/index.scss
+++ b/app/javascript/homeland/index.scss
@@ -454,7 +454,7 @@ input[type="file"] {
   }
 
   li > a:hover {
-    color: vra(--text-color1);
+    color: var(--text-color1);
     background: var(--gray);
   }
 
