Ignore prefetch for data-remote link

--- a/app/views/topics/_topic_sidebar.html.erb
+++ b/app/views/topics/_topic_sidebar.html.erb
@@ -29,14 +29,13 @@
         <% if can?(:manage, @topic) %>
           <div style="margin-bottom: 8px">
             <% if !@topic.suggested_at.blank? %>
-            <%= link_to raw("<i class='fa fa-pin'></i> 取消"), unsuggest_admin_topic_path(@topic), method: :post, remote: true %>
+              <%= link_to raw("<i class='fa fa-pin'></i> 取消"), unsuggest_admin_topic_path(@topic), method: :post, remote: true %>
             <% else %>
-            <%= link_to raw("<i class='fa fa-pin'></i> 置顶"), suggest_admin_topic_path(@topic), method: :post, remote: true %>
+              <%= link_to raw("<i class='fa fa-pin'></i> 置顶"), suggest_admin_topic_path(@topic), method: :post, remote: true %>
             <% end %>
             <% if !@topic.excellent? %>
-            <%= link_to raw("<i class='fa fa-award'></i> 加精"), action_topic_path(@topic, type: 'excellent'), method: "post", remote: true %>
+              <%= link_to raw("<i class='fa fa-award'></i> 加精"), action_topic_path(@topic, type: 'excellent'), method: "post", remote: true %>
             <% end %>
-
             <% if !@topic.ban? %>
               <%= link_to raw("<i class='fa fa-ban'></i> 屏蔽"), ban_topic_path(@topic), remote: true, title: "全站屏蔽此贴" %>
             <% else %>
@@ -44,7 +43,6 @@
             <% end %>
           </div>
         <% end %>
-
         <div>
           <% if can?(:close, @topic) %>
             <% if !@topic.closed? %>
@@ -54,7 +52,7 @@
             <% end %>
           <% end %>
           <% if can?(:edit, @topic) %>
-          <%= link_to raw('<i class="fa fa-edit"></i> 编辑'), edit_topic_path(@topic), title: "修改本帖" %>
+            <%= link_to raw('<i class="fa fa-edit"></i> 编辑'), edit_topic_path(@topic), title: "修改本帖", data: { prefetch: false } %>
           <% end %>
           <% if can?(:destroy, @topic) %>
             <%= link_to raw('<i class="fa fa-trash"></i> 删除'), topic_path(@topic.id), method: :delete, 'data-confirm' => t("common.confirm_delete"), title: "删除本帖", remote: true %>
@@ -64,7 +62,6 @@
       <a href="#" class="btn btn-default btn-sm btn-block btn-move-page" data-type="bottom"><i class="fa fa-arrow-down"></i></a>
     </div>
   </div>
-
   <div class="notify-updated">
     <a class="update" href="#"><i class="fa fa-bell-o"></i> <b>有新回复！</b>点击这里立即载入</a>
   </div>
