--- a/app/views/topics/_buttons.html.erb
+++ b/app/views/topics/_buttons.html.erb
@@ -4,17 +4,15 @@
     <%= topic_follow_tag(@topic) %>
     <%= topic_favorite_tag(@topic) %>
   <% end %>
-
   <% if can? :suggest, @topic %>
     <% if !@topic.suggested_at.blank? %>
-    <%= link_to raw("<i class='fa fa-pin'></i> 取消"), unsuggest_admin_topic_path(@topic), method: :post, remote: true %>
+      <%= link_to raw("<i class='fa fa-pin'></i> 取消"), unsuggest_admin_topic_path(@topic), method: :post, remote: true %>
     <% else %>
-    <%= link_to raw("<i class='fa fa-pin'></i> 置顶"), suggest_admin_topic_path(@topic), method: :post, remote: true %>
+      <%= link_to raw("<i class='fa fa-pin'></i> 置顶"), suggest_admin_topic_path(@topic), method: :post, remote: true %>
     <% end %>
     <% if !@topic.excellent? %>
-    <%= link_to raw("<i class='fa fa-award'></i> 加精"), action_topic_path(@topic.id, type: 'excellent'), title: "设为精华帖" , method: :post, remote: true %>
+      <%= link_to raw("<i class='fa fa-award'></i> 加精"), action_topic_path(@topic.id, type: 'excellent'), title: "设为精华帖" , method: :post, remote: true %>
     <% end %>
-
     <% if !@topic.ban? %>
       <%= link_to raw("<i class='fa fa-ban'></i> 屏蔽"), ban_topic_path(@topic), remote: true, title: "全站屏蔽此贴" %>
     <% else %>
@@ -29,12 +27,11 @@
         <%= link_to raw("<i class='fa fa-undo'></i>"), action_topic_path(@topic, type: 'open'), method: 'post', title: "重新开启话题", remote: true, data: { toggle: 'tooltip' } %>
       <% end %>
     <% end %>
-
     <% if can?(:edit, @topic) %>
-    <%= link_to "", edit_topic_path(@topic), class: "fa fa-edit", title: "修改本帖" %>
+      <%= link_to "", edit_topic_path(@topic), class: "fa fa-edit", title: "修改本帖", data: { prefetch: false }  %>
     <% end %>
     <% if can?(:destroy, @topic) %>
-    <%= link_to "", topic_path(@topic.id), method: :delete, remote: true, 'data-confirm': t("common.confirm_delete"), class: "fa fa-trash", title: "删除本帖" %>
+      <%= link_to "", topic_path(@topic.id), method: :delete, remote: true, 'data-confirm': t("common.confirm_delete"), class: "fa fa-trash", title: "删除本帖" %>
     <% end %>
   </span>
 </div>
