Fix #1176 missed pencil icon

--- a/app/javascript/homeland/iconfont.scss
+++ b/app/javascript/homeland/iconfont.scss
@@ -13,4 +13,7 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
   &-warning {
     @extend .fa-exclamation-triangle;
   }
+  &-pencil {
+    @extend .fa-edit;
+  }
 }
