--- a/app/javascript/homeland/_vars.scss
+++ b/app/javascript/homeland/_vars.scss
@@ -76,6 +76,7 @@ $yellow: #fee209;
     --table-border-color: #e0e0e0;
 
     --topic-item-border-color: #f0f0f0a3;
+    --topic-item-hover-background-color: #f9f9f9;
 
     --label-awesome-background-color: #ffcc8b24;
     --label-awesome-link-color: #adaaa8;
