--- a/app/javascript/homeland/_vars.scss
+++ b/app/javascript/homeland/_vars.scss
@@ -26,8 +26,8 @@ $yellow: #fee209;
     --btn-default-text-color: #202020;
     --btn-default-background-color: #fcfcfc;
     --btn-default-border-color: #ced4da;
-    --btn-default-active-background-color: #f0f0f0;
-    --btn-default-active-border-color: #e0e0e0;
+    --btn-default-active-background-color: #e0e0e0;
+    --btn-default-active-border-color: #c0c0c0;
     --btn-default-active-text-color: #aaa;
     --btn-default-hover-border-color: #73739038;
 
