Use Topic list style for user profile page

--- a/app/views/users/_topics.html.erb
+++ b/app/views/users/_topics.html.erb
@@ -1,14 +1,10 @@
-<table class="node-topics table">
-  <tr class="head">
-    <td class="node hide-ios"><%=t("common.node")%></td>
-    <td class="title"><%=t("common.title")%></td>
-    <td class="replies"><%=t("common.replies_count")%>/<%= t("common.likes_count") %></td>
-  </tr>
-  <% topics.each do |topic| %>
-    <tr class="topic <%= cycle("odd","") %> <%= 'deleted' if topic.deleted? %>">
-      <td class="node hide-ios"><%= render_node_name(topic.node_name,topic.node_id) %></td>
-      <td class="title"><%= link_to(topic.title, topic_path(topic)) %> <%= topic_excellent_tag(topic) %> <em><%= timeago(topic.created_at) %></td>
-      <td class="replies"><%= topic.replies_count %>/<%= topic.likes_count %> </td>
-    </tr>
+<div class="topics topics-<%= action_name %> card">
+  <div class="card-body item-list">
+    <%= render partial: '/topics/topic', collection: topics, locals: { suggest: false } %>
+  </div>
+  <% if topics.total_pages && topics.total_pages > 1 %>
+  <div class="card-footer clearfix">
+    <%= paginate topics %>
+  </div>
   <% end %>
-</table>
+</div>
