--- a/app/views/topics/_topic_info.html.erb
+++ b/app/views/topics/_topic_info.html.erb
@@ -33,7 +33,7 @@
       <%= topic.hits %> <%= t("common.read_times")%>
     </div>
   </div>
-  <div class="avatar media-right">
+  <div class="avatar media-right d-md-none">
     <%= user_avatar_tag(@topic.user, :md) %>
   </div>
 </div>
