--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <%= render "sidebar", user: @user %>
 
-  <div class="col-md-8">
+  <div class="col-lg-8">
     <%= render "menu" %>
 
     <%= render "info" %>
