--- a/app/javascript/front/users.scss
+++ b/app/javascript/front/users.scss
@@ -480,6 +480,12 @@ table.node-topics {
   }
 }
 
+.button-follow-user.btn-primary.active {
+  background: var(--btn-default-active-background-color) !important;
+  border-color: var(--btn-default-active-border-color) !important;
+  color: var(--text-color1) !important;
+}
+
 .opts {
   .button-follow-user {
     &.active {
