--- a/app/javascript/homeland/index.scss
+++ b/app/javascript/homeland/index.scss
@@ -899,12 +899,12 @@ img.emoji {
   }
   .row {
     margin: 0;
-    .col-md-9,
-    .col-md-8,
-    .col-md-6,
-    .col-md-5,
-    .col-md-4,
-    .col-md-3 {
+    .col-lg-9,
+    .col-lg-8,
+    .col-lg-6,
+    .col-lg-5,
+    .col-lg-4,
+    .col-lg-3 {
       padding: 0;
     }
   }
@@ -917,11 +917,8 @@ img.emoji {
 
   .topics {
     .topic {
-      padding: 8px !important;
-      margin: 0 -8px !important;
-
-      .avatar {
-        margin-top: 8px;
+      .node {
+        display: none;
       }
       .count {
         font-size: 12px;
