Fix nil call error

--- a/app/views/users/_profile_card.html.erb
+++ b/app/views/users/_profile_card.html.erb
@@ -1,3 +1,4 @@
+<% if user %>
 <div class="user-profile-card">
   <div class="media">
     <div class="avatar-box">
@@ -38,3 +39,4 @@
     </div>
   <% end %>
 </div>
+<% end %>
