Refactor registration and login to support complete user info with OAuth login. Fix #1155

--- a/app/javascript/homeland/index.scss
+++ b/app/javascript/homeland/index.scss
@@ -320,6 +320,11 @@ body {
   }
 }
 
+.form-error {
+  margin-top: 5px;
+  color: #ee4343;
+}
+
 .form-control {
   background-color: var(--form-control-background-color);
   border-color: var(--form-control-border-color);
