--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,21 @@
 <% title_tag t("users.register_user") %>
+
+<%
+auth_session = session[:omniauth] || {}
+auth_info = auth_session["info"] || {}
+if auth_info
+  resource.omniauth_provider = auth_session["provider"]
+  resource.omniauth_uid = auth_session["uid"]
+
+  resource.email = auth_info["email"] if resource.email.blank?
+  resource.name = auth_info["name"] if resource.name.blank?
+  if resource.login.blank?
+    resource.login = auth_info["login"] || auth_info["name"]
+  end
+end
+%>
+
+
 <div class="row">
   <div class="col"></div>
   <div class="col-lg-6">
@@ -10,33 +27,56 @@
             <%= link_to t("common.login"), new_session_path(resource_name) %>
           </div>
         </div>
-        <%= form_for resource, as: resource_name, url: registration_path(resource_name), remote: true do |f| %>
-          <div class="form-group">
+
+        <% if auth_info.present? %>
+        <div class="alert">
+          <h4 class="alert-heading">完善您的账号信息</h4>
+          <p>您必须填写以下表单才能完成绑定 <strong><%= Homeland::Utils.omniauth_camelize(resource.omniauth_provider) %></strong> 的登录方式。</p>
+          <p>如果你已经有账号，你可以通过 <%= link_to "登录", new_session_path(resource_name) %> 来绑定账号。</p>
+        </div>
+        <% end %>
+
+        <%= form_for resource, as: resource_name, url: registration_path(resource_name) do |f| %>
+          <% if auth_info.present? %>
+            <%= f.hidden_field :omniauth_provider %>
+            <%= f.hidden_field :omniauth_uid %>
+          <% end %>
+
+          <%= render "shared/error_messages", target: resource %>
+
+          <%= form_group(f, :login) do %>
             <%= f.text_field :login, class: "form-control form-control-lg", placeholder: t("users.login"), hint: t("users.suggest_using_twitter_id") %>
-          </div>
-          <div class="form-group">
+          <% end %>
+
+          <%= form_group(f, :name) do %>
             <%= f.text_field :name, class: "form-control form-control-lg", placeholder: t("activerecord.attributes.user.name") %>
-          </div>
-          <div class="form-group">
+          <% end %>
+
+          <%= form_group(f, :email) do %>
             <%= f.text_field :email, type: :email, class: "form-control form-control-lg", placeholder: t("activerecord.attributes.user.email") %>
-          </div>
+          <% end %>
+
           <div class="form-group">
             <div class="custom-control custom-checkbox custom-checkbox-lg">
               <%= f.check_box :email_public, checked: true, class: "custom-control-input" %>
               <label for="user_email_public"  class="custom-control-label"><%= t("activerecord.attributes.user.email_public") %></label>
             </div>
           </div>
-          <div class="form-group">
+
+          <%= form_group(f, :password) do %>
             <%= f.password_field :password, class: "form-control form-control-lg", placeholder: t("activerecord.attributes.user.password") %>
-          </div>
-          <div class="form-group">
+          <% end %>
+
+          <%= form_group(f, :password_confirmation) do %>
             <%= f.password_field :password_confirmation, class: "form-control form-control-lg", placeholder: t("activerecord.attributes.user.password_confirmation") %>
-          </div>
-          <div class="form-group">
+          <% end %>
+
+          <%= form_group(f, :base, label: false) do %>
             <div class="input-group input-group-lg">
               <%= render "/shared/captcha_input" %>
             </div>
-          </div>
+          <% end %>
+
           <div class="form-actions">
             <%= f.submit t('users.submit_new_user'), class: "btn btn-lg btn-primary", 'data-disable-with' => t("common.submitting") %>
           </div>
