--- a/app/javascript/homeland/iconfont.scss
+++ b/app/javascript/homeland/iconfont.scss
@@ -19,4 +19,7 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
   &-company {
     @extend .fa-briefcase;
   }
+  &-wechat {
+    @extend .fa-weixin;
+  }
 }
