--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,7 +31,7 @@ end
         <% if auth_info.present? %>
         <div class="alert">
           <h4 class="alert-heading">完善您的账号信息</h4>
-          <p>您必须填写以下表单才能完成绑定 <strong><%= Homeland::Utils.omniauth_camelize(resource.omniauth_provider) %></strong> 的登录方式。</p>
+          <p>您必须填写以下表单才能完成绑定 <strong><%= Homeland::Utils.omniauth_name(resource.omniauth_provider) %></strong> 的登录方式。</p>
           <p>如果你已经有账号，你可以通过 <%= link_to "登录", new_session_path(resource_name) %> 来绑定账号。</p>
         </div>
         <% end %>
