Revert "Add switch for dark mode #1189"
This reverts commit d287a81f9d354b1dc402a11d4320c5a0c343f0f2.

--- a/app/javascript/homeland/dark-mode.scss
+++ b/app/javascript/homeland/dark-mode.scss
@@ -1,84 +1,84 @@
-:root[data-theme="dark"] {
-  --primary: #9e9e9e !important;
-  --text-color: #e0e0e0;
-  --text-color1: #bbb;
-  --text-color2: #999;
-  --text-color3: #666;
-  --link-color: #222;
-  --gray: #36373ab5;
-  --secondary: #6f6f6f;
-  --link-color: #eeeeeebd;
-  --red: #eb5424aa;
-  --red-light: #fdf1ed17;
-  --yellow: #fee209aa;
-  --yellow-light: #fffdee17;
-  --blue: #2275daaa;
-  --blue-light: #e6f0fb17;
-  --green: #19a302aa;
-  --green-light: #f4fff217;
+@media (prefers-color-scheme: dark) {
+  :root {
+    --primary: #9e9e9e !important;
+    --text-color: #e0e0e0;
+    --text-color1: #bbb;
+    --text-color2: #999;
+    --text-color3: #666;
+    --link-color: #222;
+    --gray: #36373ab5;
+    --secondary: #6f6f6f;
+    --link-color: #eeeeeebd;
+    --red: #eb5424aa;
+    --red-light: #fdf1ed17;
+    --yellow: #fee209aa;
+    --yellow-light: #fffdee17;
+    --blue: #2275daaa;
+    --blue-light: #e6f0fb17;
+    --green: #19a302aa;
+    --green-light: #f4fff217;
 
-  --btn-default-text-color: #a9a9a9a8;
-  --btn-default-background-color: #3d3d3d99;
-  --btn-default-border-color: #1c1c1d;
-  --btn-default-active-background-color: #3d3d3d77;
-  --btn-default-active-border-color: #1c1c1d;
-  --btn-default-active-text-color: #eeeeeebd;
-  --btn-default-hover-border-color: #1c1c1d;
+    --btn-default-text-color: #a9a9a9a8;
+    --btn-default-background-color: #3d3d3d99;
+    --btn-default-border-color: #1c1c1d;
+    --btn-default-active-background-color: #3d3d3d77;
+    --btn-default-active-border-color: #1c1c1d;
+    --btn-default-active-text-color: #eeeeeebd;
+    --btn-default-hover-border-color: #1c1c1d;
 
-  --form-control-background-color: #101010;
-  --form-control-border-color: #3d3d3d3b;
-  --form-control-disabled-background-color: #27272796;
+    --form-control-background-color: #101010;
+    --form-control-border-color: #3d3d3d3b;
+    --form-control-disabled-background-color: #27272796;
 
-  --input-group-background-color: #1e1e1e;
-  --input-group-border-color: #3d3d3d3b;
+    --input-group-background-color: #1e1e1e;
+    --input-group-border-color: #3d3d3d3b;
 
-  --body-background-color: #000;
+    --body-background-color: #000;
 
-  --navbar-background-color: #151516;
-  --navbar-text-color: #a4a8bbde;
-  --navbar-shadow-color: #c3c3c526;
-  --navbar-fixed-shadow-color: rgba(144, 144, 144, 0.37);
-  --navbar-brand-text-color: #aaa;
-  --navbar-brand-text-strong-color: #1a5092;
-  --navbar-item-link-active-background-color: #151516;
+    --navbar-background-color: #151516;
+    --navbar-text-color: #a4a8bbde;
+    --navbar-shadow-color: #c3c3c526;
+    --navbar-fixed-shadow-color: rgba(144, 144, 144, 0.37);
+    --navbar-brand-text-color: #aaa;
+    --navbar-brand-text-strong-color: #1a5092;
+    --navbar-item-link-active-background-color: #151516;
 
-  --sub-navbar-background-color: #23232338;
-  --sub-navbar-shadow-color: #7e7e8638;
+    --sub-navbar-background-color: #23232338;
+    --sub-navbar-shadow-color: #7e7e8638;
 
-  --navbar-topic-title-background-color: #151516;
+    --navbar-topic-title-background-color: #151516;
 
-  --card-border-color: #3d3d3d29;
-  --card-background-color: #181819;
-  --card-title-secondary-color: #777;
+    --card-border-color: #3d3d3d29;
+    --card-background-color: #181819;
+    --card-title-secondary-color: #777;
 
-  --dropdown-menu-background-color: #222222ee;
-  --dropdown-menu-text-color: #a9a9a9a8;
-  --dropdown-menu-divider-color: #3d3d3d99;
+    --dropdown-menu-background-color: #222222ee;
+    --dropdown-menu-text-color: #a9a9a9a8;
+    --dropdown-menu-divider-color: #3d3d3d99;
 
-  --dropdown-item-active-background-color: rgba(200, 200, 200, 0.1);
-  --dropdown-item-active-text-color: #fff;
+    --dropdown-item-active-background-color: rgba(200, 200, 200, 0.1);
+    --dropdown-item-active-text-color: #fff;
 
-  --modal-background-color: #2d2d2d;
-  --modal-shadow-color: rgba(0, 0, 0, 0.19);
+    --modal-background-color: #2d2d2d;
+    --modal-shadow-color: rgba(0, 0, 0, 0.19);
 
-  --list-group-item-border-color: #3d3d3d99;
+    --list-group-item-border-color: #3d3d3d99;
 
-  --table-border-color: #36373ab5;
+    --table-border-color: #36373ab5;
 
-  --topic-item-border-color: #3d3d3d99;
-  --topic-item-hover-background-color: #222;
+    --topic-item-border-color: #3d3d3d99;
+    --topic-item-hover-background-color: #222;
 
-  --label-awesome-background-color: #f9cd940d;
+    --label-awesome-background-color: #f9cd940d;
 
-  --opts-text-color: #6f6f6f;
-  --opts-link-color: #f7f7f7a6;
-  --opts-link-hover-background-color: #77787926;
+    --opts-text-color: #6f6f6f;
+    --opts-link-color: #f7f7f7a6;
+    --opts-link-hover-background-color: #77787926;
 
-  --scrollbar-thumb-color: #333333aa;
-  --scrollbar-track-color: transparent;
-}
+    --scrollbar-thumb-color: #333333aa;
+    --scrollbar-track-color: transparent;
+  }
 
-[data-theme="dark"] {
   a {
     color: var(--link-color);
   }
@@ -97,15 +97,6 @@
       code {
         background: transparent !important;
       }
-    }
-  }
-
-  .reply {
-    &.light {
-      background: #e9e6ff0d !important;
-    }
-    &.popular {
-      background: #f7f2fc1c !important;
     }
   }
 
@@ -151,13 +142,5 @@
 
   .page-pages h1 {
     color: #fff !important;
-  }
-
-  .pagination {
-    .disabled > .page-link {
-      color: #555 !important;
-      border-color: #222;
-      background-color: #222;
-    }
   }
 }
