Add switch for dark mode #1189

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="theme" content="<%= user_theme %>">
     <title><%= Setting.app_name %> - 控制台</title>
     <%= stylesheet_pack_tag "admin" %>
     <%= javascript_packs_with_chunks_tag "application" %>
