实现允许在后台修改部分需要重启的配置，修改后通过重启功能生效

--- a/app/views/admin/site_configs/_form.html.erb
+++ b/app/views/admin/site_configs/_form.html.erb
@@ -2,6 +2,9 @@
   <div class="form-group">
     <label><%= @site_config.var %></label>
     <div class="form-text" style="margin-bottom: 10px"><%= t("setting.#{@site_config.var}") %></div>
+    <% if @site_config.require_restart? %>
+    <div class="alert alert-warning">修改此项配置需要重启方可生效</div>
+    <% end %>
     <%
 
     value = Setting.send(@site_config.var)
