--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -38,6 +38,12 @@
     <div class="main-container container">
       <div id="main" class="card">
         <div class="card-body">
+          <% if Setting.require_restart == true %>
+            <div class="alert alert-warning">
+              已修改了系统设置，需要重启应用方可生效 <%= link_to icon_tag("power-off", label: "立即重启"), reboot_admin_dashboards_path, data: { method: :post, confirm: "你确定要重启 Homeland 吗？", disable_with: "请求中..." }, class: "text-danger pull-right" %>
+            </div>
+          <% end %>
+
           <%= notice_message %>
           <%= yield %>
         </div>
