Fix font, better for Windows

--- a/app/javascript/homeland/index.scss
+++ b/app/javascript/homeland/index.scss
@@ -105,6 +105,7 @@ textarea,
 body {
   background: var(--body-background-color);
   color: var(--primary);
+  font-family: PingFang SC, Noto Sans, Roboto, Microsoft Yahei, sans-serif;
   font-size: 14px;
   letter-spacing: 0.03em;
 }
